--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,10 @@
         <item>Saint-Peterburg</item>
     </string-array>
     <string name="weather">Clouds</string>
-    <string name="enterCityName">Введите название города</string>
-    <string name="select_city">Выберите город</string>
-    <string name="menuSelectcity">Выбрать город</string>
-    <string name="aboutCity">Узнать о городе</string>
+    <string name="enterCityName">Enter ciy name</string>
+    <string name="select_city">Select city</string>
+    <string name="menuSelectcity">Select city</string>
+    <string name="aboutCity">About current city</string>
     <string name="Pyatigorsk">Pyatigorsk</string>
     <string name="Yessentuki">Yessentuki</string>
     <string name="Moscow">Moscow</string>
@@ -19,21 +19,12 @@
     <string name="gradus_forengheit">--</string>
     <string name="forengheight">90F</string>
     <string name="sunday">Воскресенье</string>
-    <string name="info">Информация о скорости ветра и давлении   </string>
-    <string name="settings">Настройки</string>
-    <string name="theme">Тема Светлая/Темная</string>
+    <string name="info">Wind speed and pressure information</string>
+    <string name="settings">Settings</string>
+    <string name="theme">Theme Light/Dark</string>
     <string name="font">Шрифт Нормальный/Крупный</string>
-    <string name="C_F">Температура в Цельсиях/Форенгейт</string>
+    <string name="C_F">Temperature unit Celsius/Fahrenheit</string>
     <string name="sunny">sunny</string>
-    <string name="_3">-3</string>
-    <string name="_10">10</string>
-    <string name="_0">0</string>
-    <string name="_2">-2</string>
-    <string name="_7">7</string>
-    <string name="_8">8</string>
-    <string name="_5">5</string>
-    <string name="_1">-1</string>
-    <string name="_m2">2</string>
     <string name="save_changes">OK</string>
     <string name="aboutcity">About City</string>
     <string name="cityinputerror">Cityname error</string>
@@ -43,5 +34,4 @@
     <string name="Wind">Wind</string>
     <string name="meters_per_second">m/c</string>
     <string name="pressure">Pressure</string>
-    <!-- TODO: Remove or change this placeholder text -->
 </resources>
