[change] delete not need fragment_city.xml, change type in WeatherResponse.kt [FIX] mistake in strings name [ADD] Constant

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
         <item>Yessentuki</item>
         <item>Moscow</item>
         <item>Pyatigorsk</item>
-        <item>Saint-Peterburg</item>
+        <item>Saint Petersburg</item>
     </string-array>
     <string name="weather">Clouds</string>
     <string name="enterCityName">Enter ciy name</string>
